2009-04-16  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-java2d-dasher.patch,
	* patches/icedtea-jscheme.patch,
	* patches/icedtea-snmp.patch:
	Dropped, first two upstream, default of
	no binary plugs makes third obsolete.
	* Makefile.am: Updated.
	* acinclude.m4: Find IcedTea on F10.
	* patches/ecj/icedtea.patch,
	* patches/icedtea-alpha-fixes.patch,
	* patches/icedtea-arch.patch,
	* patches/icedtea-doc-headers.patch,
	* patches/icedtea-gcc-suffix.patch,
	* patches/icedtea-libraries.patch,
	* patches/icedtea-linker-libs-order.patch,
	* patches/icedtea-tests-jdk.patch,
	* patches/icedtea-uname.patch,
	* patches/icedtea-zero-build.patch:
	Recreated.

2009-03-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Switch to IcedTea
	forest rather than build drop x.
	* NEWS,
	* configure.ac: Prepare for next release.

2009-03-20  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add release date for 1.9.
	* configure.ac: Bump to 1.9 proper.

2009-03-19  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-cacao-ignore-jdi-tests.patch:
	Removed; replaced by exclude list.
	* patches/icedtea-cacao-ignore-tests.patch,
	* patches/icedtea-cacao.patch:
	Moved to cacao subdirectory.
	* Makefile.am:
	Bump CACAO to 0.99.4, fix CACAO for OpenJDK7,
	update target to jdk_only.
	* patches/cacao/ignore-tests.patch: Moved.
	* patches/cacao/launcher.patch: Updated.
	* patches/cacao/openjdk7.patch: Fix CACAO 0.99.4
	to work with OpenJDK7.
	* test/jtreg/excludelist.jdk.cacao.jtx:
	Replacement exclude list for CACAO JDI tests.

2009-03-19  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Cleanup options so only --enable-shark is
	needed to build Shark.
	* configure.ac: Reorder for above.
	* patches/hotspot/default/icedtea-shark.patch:
	Recreated against b50/HSb15.

2009-03-09  Tomas Hurka  <tomas.hurka@sun.com>

	* Makefile.am: Updated visualvm to version 1.1.1.

2009-03-07  Matthias Klose  <doko@ubuntu.com>
